--- a/src/App.scss
+++ b/src/App.scss
@@ -1,9 +1,8 @@
 @import "~bootstrap/scss/bootstrap";
 
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100,300,400,500,700,900&display=swap");
-
 // font-family: 'Roboto', sans-serif;
 $primary-color: #1d1f7b;
+$secondary-color: #fec200;
 
 /* Flex Box */
 
