--- a/src/Styles/Home/style.scss
+++ b/src/Styles/Home/style.scss
@@ -1,6 +1,7 @@
 @import "../../App.scss";
 
 .home {
+    // Header
     .header {
         .content {
             h1 {
@@ -47,6 +48,57 @@
 
             @media (min-width: 992px) {
                 font-size: 40px;
+            }
+        }
+    }
+
+    // Service
+    .service {
+        padding-bottom: 60px;
+
+        .content {
+            h1 {
+                margin-bottom: 0;
+                font-weight: 900;
+                font-family: 'Roboto', sans-serif;
+
+                @media (min-width: 992px) {
+                    font-size: 60px;
+                }
+            }
+
+            h3 {
+                font-weight: 200;
+                text-transform: capitalize;
+                font-family: 'Roboto', sans-serif;
+            }
+
+            p {
+                font-size: 15px;
+                line-height: 1.8rem;
+                font-family: 'Roboto', sans-serif;
+            }
+
+            .btn {
+                color: #fff;
+                font-size: 15px;
+                font-weight: 900;
+                padding: 7px 30px;
+                border-radius: 25px;
+                background: $secondary-color;
+                font-family: 'Roboto', sans-serif;
+            }
+
+            @media (min-width: 992px) {
+                padding-top: 50px;
+            }
+        }
+
+        img {
+            width: 250px;
+
+            @media (min-width: 576px) {
+                width: 400px;
             }
         }
     }
