--- a/src/Styles/Account/Doctor/Modal/ManageSchedule/style.scss
+++ b/src/Styles/Account/Doctor/Modal/ManageSchedule/style.scss
@@ -13,10 +13,12 @@
         transition: opacity 0.4s;
         background: rgba(253, 253, 253, 0.952);
         z-index: 9999;
+        padding: 15px;
 
         .custom-modal-dialog {
-            width: 90vw auto;
-            margin: 15px;
+            width: 920px;
+            max-width: 100%;
+            margin: auto;
 
             .card {
                 border-radius: 6px;
@@ -33,12 +35,38 @@
                         padding: 6px;
                     }
                 }
-                .card-body{
-                    p{
+
+                .card-body {
+                    .patient-info-column {
+                        @media (min-width: 992px) {
+                            border-right: 1px solid #dfdfdf;
+                        }
+                    }
+
+                    p {
                         font-size: 14px;
                         margin-bottom: 0;
                         font-weight: 400;
+                        font-weight: 500;
+                        line-height: 1.8rem;
                         text-transform: capitalize;
+                    }
+
+                    .react-time-picker {
+                        width: 350px;
+                        max-width: 100%;
+                        height: 50px;
+                    }
+
+                    .btn {
+                        color: #fff;
+                        width: 350px;
+                        height: 45px;
+                        max-width: 100%;
+                        margin-top: 15px;
+                        font-weight: 900;
+                        border-radius: 0px;
+                        background: $secondary-color;
                     }
                 }
             }
