--- a/src/Styles/Account/Doctor/Modal/Profile-Update/style.scss
+++ b/src/Styles/Account/Doctor/Modal/Profile-Update/style.scss
@@ -21,6 +21,33 @@
             .card {
                 border-radius: 6px;
                 overflow: hidden;
+
+                .card-header {
+                    h5 {
+                        font-weight: 700;
+                        font-family: 'Roboto', sans-serif;
+                    }
+                }
+
+                .card-body {
+                    .form-control {
+                        font-size: 14px;
+                        font-weight: 500;
+                        font-family: 'Roboto', sans-serif;
+                    }
+
+                    .form-control:focus {
+                        border: 1px solid $primary-color;
+                    }
+
+                    .btn {
+                        font-size: 15px;
+                        font-weight: 700;
+                        margin-top: 20px;
+                        padding: 8px 30px;
+                        font-family: 'Roboto', sans-serif;
+                    }
+                }
             }
         }
     }
